# email_newsletter_api

./: Cargo.toml  Dockerfile
scripts/: postgresdb.bat
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
