[package]
name = "email_newsletter_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter_api"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-actix-rustls" , "macros", "postgres", "uuid", "chrono", "migrate" ]  }
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.23"
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
reqwest = "0.11.13"
